modules/web/css/ballerina-file-editor.css
.svg-container {
    background: none;
}

.panel-default > .panel-heading {
    margin-bottom: 0;
}

.design-view-container {
    padding-left: 244px;
    padding-top: 0;
    height: 100%;
}

.source-view-container {
    height: 100%;
}

.canvas-container {
    float: left;
    height: auto;
    min-height: 1000px;
    position: relative;
}

.outerCanvasDiv{
    overflow-x: scroll;
    overflow-y:scroll;
    height:100%;
}

.outerSourceDiv{
    height:100%;
}

.wrapperDiv{
    height: 100vh;
    padding-bottom: 121px;
}

.canvas-top-controls-container{
    float: left;
    width: 100%;
}

.canvas-heading-new h4{
    background: #dae9bd;
}

.canvas-heading-new h4 a{
    font-size: 105%;
}

.container-outer-div {
    border-radius: 0;
    float: left;
}

.outer-box {
    border: 1px solid #909090;
    border-top: none;
    overflow-x: hidden;
    position: relative;
    top: 0;
    right: 0;
}

.panel {
    box-shadow: none;
}

.panel-title {
    background: white;
    border-top: 1px solid #909090;
    border-bottom: 1px solid #909090;
    border-right: 1px solid #909090;
    vertical-align: middle;
}

.panel-title > a {
    margin-left: 6px;
    text-decoration: none;
}

.panel-icon,
.service-icon,
.connector-icon,
.function-icon {
    padding: 6px 5px 5px;
    background-color: #fff;
    font-size: 16px;
    width: 27px;
    text-align: center;
}

.title-link {
    padding-left: 10px;
}

.delete-icon:hover {
    color: #fff;
}

.panel-collapse .collapse {
    border: 1px solid;
}

.tab-pane .panel {
    background: none;
    width: 98.6%;
}

.headingRect:hover {
    cursor: pointer;
}

.btn-icon {
    /*opacity: 0.8;*/
}

.btn-icon i{
    /*opacity: 0.5;*/
}

.btn-icon:hover {
    opacity: 1;
    cursor: pointer;
}

.source-container {
    display: none;
    height: 1000px;
}

.text-editor {
    height: 100%;
}

.view-source-btn {
    z-index: 1000;
}

.view-design-btn {
    position: relative;
    color: #fff;
    z-index: 1000;
    display: block !important;
}

/** when on a specific canvas hover **/
.tab-pane .panel.design-view-hover {
    background-color: rgba(0, 128, 0, 0.1);
}

/** when on main canvas hover **/
.tab-pane .design-view-hover .panel {
    background-color: rgba(255, 255, 255, 0.8);
}

.tab-pane .panel.design-view-hover .panel-title {
    background-color: rgba(0, 128, 0, 0.1);
}

.tab-pane .panel.design-view-hover rect.resource-content {
    fill: #fff;
    fill-opacity: 0.8;
}

.design-view-hover {
    background-color: rgba(0, 128, 0, 0.1);
}

.design-view-hover-svg {
    fill: #008000;
    fill-opacity: 0.2;
}

/**  syntax highlight **/
.ace_ballerina-keyword-control {
    color: #CC7832;
}

.ace_ballerina-numeric {
    color: #6897BB;
}

.ace_ballerina-keyword-other {
    color: #9876AA;
}

.ace_ballerina-package-reference {
    color: #9876AA;
}

.ace_ballerina-keyword-primitive-type {
    color: #FFC66D;
}

.ace_ballerina-keyword-non-primitive-type {
    color: #FFC66D;
}

.ace_ballerina-keyword-definition {
    color: #CC7832;
}

.ace_ballerina-annotation {
    color: #BBB529;
}

.ace_ballerina-strings {
    color: #629755;
}

.ace_ballerina-comments {
    color: #808080;
}

.ace_ballerina-keyword-language {
    color: #CC7832;
}

.ace_ballerina-keyword-identifier {
    color: #fff;
}

.import-packages-pane {
    overflow: visible;
}
/** Resource parameter CSS **/

.resource-parameters-main-action-wrapper {
    width: 721px;
    overflow: auto;
    display: none;
    background: #fff;
}

.resource-parameters-wrapper-heading {
    padding-bottom: 28px;
    background-color: #3d3d3d;
}

.resource-parameters-wrapper-heading input[type=text] {
    width: 120px;
    margin-left: 5px;
}

.resource-parameters-wrapper-heading-identifier-textbox {
    width: 405px !important;
}

.resource-parameters-wrapper-heading select {
    width: 160px;
}

.resource-parameters-heading-annotations-wrapper {
    float: left;
    padding-left: 7px;
    padding-top: 0;
    padding-right: 10px;
    height: auto;
    border-right: 1px solid #a3a3a3;
}

.resource-parameters-heading-annotations-wrapper input[type=checkbox] {
    margin-top: 6px;
}

.resource-parameters-heading-parameter-wrapper {
    float: left;
    padding-top: 0;
    padding-left: 10px;
    height: auto;
}

.resource-parameters-heading-annotations-wrapper-text {
    padding-right: 5px;
    padding-left: 3px;
    color: #FFF;
}

.resource-parameters-edit-annotations-wrapper-text {
    padding-right: 5px;
    padding-left: 3px;
    color: #000;
}

.resource-parameters-detail-wrapper input[type=text] {
    width: 175px;
    margin-left: 5px;
}

.resource-parameters-heading-separator {
    float: left;
    color: white;
    padding-left: 10px;
    padding-right: 10px;
    font-size: 25px;
}

.resource-parameters-action-icon {
    top: 7px;
    right: 6px;
}

.resource-parameters-action-icon-i {
    background-color: #818181;
}

.resource-parameters-details-wrapper {
    padding: 0;
    overflow-y: scroll;
    width: 100%;
    border-left: 1px solid #555;
    border-bottom: 1px solid #555;
    max-height: 450px;
}

.resource-parameters-details-wrapper hr {
    margin-left: 8px;
    margin-right: 5px;
}

.resource-parameters-detail-wrapper {
    overflow: hidden;
    padding: 4px 5px 3px 12px;
    cursor: pointer;
}

.resource-parameters-detail-wrapper:hover {
    background-color: #f5f5f5;
}

.resource-parameters-detail-wrapper:hover .resource-parameters-detail-close-wrapper {
    display: block;
}

.resource-parameters-detail-close-wrapper {
    float: right;
    font-size: 10px;
    padding-top: 3px;
    color: #999;
    display: none;
}

.resource-parameters-detail-type-wrapper {
    float: left;
    width: 120px;
    font-weight: 400;
}

.resource-parameters-detail-identifier-wrapper {
    float: left;
}

.resource-parameters-detail-identifier-wrapper input {
    padding-left: 8px;
    padding-right: 8px;
    width: 280px;
    height: 22px;
}
/* ... */

